# soccer-video-detection-ai-agent

./: .gitattributes  .gitignore  README.md  chute_config.yml  miner.py  osnet_model.pth.tar-100  player_detect.pt  pyproject.toml  requirements.txt  run.py
scripts/: run_video.py
src/soccer_agent/: __init__.py  agent.py  types.py
weights/: keypoint_detect.pt
